The provided code changes introduce several improvements centered around email sending and Kafka integration. Here's a breakdown:
**Email Service Refactoring:**

* **Decoupling and Reusability:** The `EmailService` is significantly improved by extracting common email sending logic into the `processAndSendEmail` method.  This promotes code reuse and reduces redundancy between `sendResetPasswordEmail` and `sendTransactionEmail`.  The helper functions `prepareEmailContent` and `configureAndSendEmail` further enhance modularity and readability.
* **Kafka Integration for Email Events:** The addition of `publishEmailEvent` and the use of `kafkaTemplate` introduce asynchronous email event publishing. After an email is sent, an `EmailEvent` is published to the "elevate.emails" Kafka topic. This allows other services to react to email events without tight coupling to the `EmailService`.
* **Simplified Retry Logic:** The `@Retryable` annotation is now directly applied to the `sendTransactionEmail` and `sendResetPasswordEmail` methods, simplifying the retry configuration.

**Kafka Configuration Enhancements:**

* **Generic Producer and Consumer Configurations:** The `KafkaConfig` now uses generic methods (`getProducerConfigs`, `getConsumerConfigs`) to create producer and consumer configurations. This reduces boilerplate and ensures consistency across different Kafka topics.
* **Generic Builders for Factories, Templates, and Topics:** The introduction of generic builder methods (`buildProducerFactory`, `buildConsumerFactory`, `buildListenerContainerFactory`, `buildTopic`) further streamlines the Kafka configuration, making it easier to add new topics and consumers.
* **New Email Topic and Consumer:** A new Kafka topic ("elevate.emails") and corresponding consumer are added to handle `EmailEvent` messages.  The configuration for this new topic and consumer leverages the generic builder methods, maintaining consistency.
* **Improved Error Handling:** The error handling within the